@@ -1,3 +1,11 @@
+2021-07-31  Alexander Mikhaylenko  <alexm@gnome.org>
+
+        Add myself (Alexander Mikhaylenko) to contributors.json as a committer
+
+        Unreviewed.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2021-07-30  Jonathan Bedard  <jbedard@apple.com>
 
         [git-webkit] Forward errors from log and blame
